RESOLVED FIXED177836
RenderMenuList should not hold raw pointers
https://bugs.webkit.org/show_bug.cgi?id=177836
Summary RenderMenuList should not hold raw pointers
alan
Reported 2017-10-03 14:00:46 PDT
m_innerBlock and m_buttonText
Attachments
Patch (3.43 KB, patch)
2017-10-03 14:20 PDT, alan
no flags
Patch (3.42 KB, patch)
2017-10-03 14:29 PDT, alan
no flags
alan
Comment 1 2017-10-03 14:20:07 PDT
Antti Koivisto
Comment 2 2017-10-03 14:27:18 PDT
Comment on attachment 322581 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=322581&action=review > Source/WebCore/rendering/RenderMenuList.cpp:109 > + m_innerBlock = makeWeakPtr(*newInnerBlock.get()); No need for .get()
Antti Koivisto
Comment 3 2017-10-03 14:27:59 PDT
Comment on attachment 322581 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=322581&action=review > Source/WebCore/rendering/RenderMenuList.cpp:296 > + m_buttonText = makeWeakPtr(*newButtonText.get()); No need for .get()
alan
Comment 4 2017-10-03 14:29:19 PDT
WebKit Commit Bot
Comment 5 2017-10-03 15:39:54 PDT
Comment on attachment 322583 [details] Patch Clearing flags on attachment: 322583 Committed r222814: <http://trac.webkit.org/changeset/222814>
WebKit Commit Bot
Comment 6 2017-10-03 15:39:57 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2017-10-03 15:40:35 PDT
Note You need to log in before you can comment on or make changes to this bug.