RenderMenuList should not hold raw pointers https://bugs.webkit.org/show_bug.cgi?id=177836

Reviewed by Antti Koivisto.

While both m_buttonText and m_innerBlock are child renderers of
the RenderMenuList, so the their lifecycles are supposed to tied
to the parent object, this patch removes some manual raw pointer managing.

Covered by existing tests.

* rendering/RenderMenuList.cpp:
(WebCore::RenderMenuList::RenderMenuList):
(WebCore::RenderMenuList::createInnerBlock):
(RenderMenuList::takeChild):
(RenderMenuList::setText):
* rendering/RenderMenuList.h:


Canonical link: https://commits.webkit.org/194093@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222814 268f45cc-cd09-0410-ab3c-d52691b4dbfc